<resources>
    <string name="app_name">Internet Speed Meter</string>
    <string name="title_home">HOME</string>
    <string name="title_option">OPTION</string>
    <string name="title_about">ABOUT</string>


    <string name="about_head">Internet Speed Meter</string>
    <string name="about_description">Internet Speed Meter (ISM) displays your internet speed in status bar. This helps you to monitor network connection anytime while using your device.</string>
    <string name="about_support">Support us</string>
    <string name="option_auto_start">Auto Start</string>
    <string name="option_auto_start_sub">AutoStart Service on Phone Start</string>
    <string name="option_show_notification">Show Notification</string>
    <string name="option_show_notification_sub">Show Network Speed Indicator in Status Bar</string>
    <string name="option_auto_hide">Auto Hide</string>
    <string name="option_auto_hide_sub">Auto Hide Notification When Network is Unavailable</string>
    <string name="option_lockscreen_notification">LockScreen Notification</string>
    <string name="option_lockscreen_sub">Hide Notification on lockScreen</string>
    <string name="option_speed_detail">Internet Speed Detail</string>
    <string name="option_speed_detaile_sub">Show Upload and Download Speed or Daily Data Usage in Notification</string>
    <string name="option_title_startup">Startup Setting</string>
    <string name="option_title_notification">Notification Setting</string>
    <string name="option_show_wifi">Show Wifi SSID</string>
    <string name="option_show_wifi_detaile">Show Wifi SSID in Notification</string>
    <string name="option_show_dataUsage">Show Data Usage</string>
    <string name="option_show_dataUsage_detaile">Show Daily Data Usage in Notification</string>
    <string name="option_show_ads">Show Ads</string>
    <string name="option_show_ads_detaile">Show Ads on Homepage </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="axisY">Speed KB/s</string>
    <string name="bytee">byte</string>
    <string name="kilobyte">KB</string>
    <string name="megabyte">MB</string>
    <string name="gigabyte">GB</string>
    <string name="mobile">Data</string>
    <string name="wifi">WIFI</string>
    <string name="speed">Speed</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="b">B/s</string>
    <string name="kb">KB/s</string>
    <string name="mb">MB/s</string>
    <string name="banner_ad_unit_id">ca-app-pub-3034909524223644/2242972657</string>



</resources>