<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:theme="@style/BottomNavigationTheme"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.PersianGeeks.internetspeedmeterpro.lite.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_option"
        android:name="com.PersianGeeks.internetspeedmeterpro.lite.ui.options.OptionFragment"
        android:label="@string/title_option"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.PersianGeeks.internetspeedmeterpro.lite.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>